# wgpu_renderer

./: Cargo.toml  LICENSE  README.md  index.html
examples/: color_shader.rs  color_shader2.rs  lern_wgpu.rs
examples/default/: default_renderer.rs  default_window.rs  mod.rs
examples/geometry/: circle.rs  mod.rs  quad.rs
src/: default_application.rs  default_window.rs  lib.rs  wgpu_renderer.rs
src/freefont/: .uuid  mod.rs
src/gui/: aligned_element.rs  button.rs  gui.rs  gui_element.rs  horizontal_layout.rs  label.rs  mod.rs  rectangle.rs  tests.rs  vertical_layout.rs
src/gui3/: aligned_element.rs  gui_element.rs  horizontal_layout.rs  mod.rs  rectangle.rs  tests.rs  vertical_layout.rs
src/gui3_wgpu/: gui_label.rs  gui_texture.rs  mod.rs  utils.rs
src/label/: label.rs  label_mesh.rs  mod.rs
src/performance_monitor/: fps.rs  graph.rs  mod.rs  orthographic_uniform.rs  watch.rs
src/renderer/: depth_texture.rs  mod.rs
src/renderer/camera/: camera.rs  camera_controller.rs  mod.rs
src/shape/: grid.rs  mod.rs  square.rs  uv_sphere.rs
src/vertex_color_shader/: camera_bind_group_layout.rs  camera_uniform.rs  camera_uniform_buffer.rs  color.rs  color_buffer.rs  index_buffer.rs  instance.rs  instance_buffer.rs  mesh.rs  mod.rs  pipeline.rs  shader.wgsl  vertex.rs  vertex_buffer.rs  vertex_color_shader_draw.rs
src/vertex_heightmap_shader/: heightmap.rs  heightmap_bind_group_layout.rs  heightmap_texture.rs  mesh.rs  mod.rs  pipeline.rs  shader.wgsl
src/vertex_texture_shader/: mesh.rs  mod.rs  pipeline.rs  shader.wgsl  texture.rs  texture_bind_group_layout.rs  vertex.rs  vertex_buffer.rs  vertex_texture_shader_draw.rs
src/wgpu_renderer/: depth_texture.rs  mod.rs
src/wgpu_renderer/camera/: camera.rs  camera_controller.rs  mod.rs  projection.rs
