[package]
name = "wgpu_renderer"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/FirePrincess01/wgpu_renderer"
description = "A collection of shaders and utilities "
license-file = "LICENSE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pollster = "0.4"
cfg-if = "1"
winit = "0.30"
bytemuck = { version = "1.21", features = [ "derive" ] }
cgmath = "0.18"
glam = "0.29"
colorous = "1.0"
anyhow = "1.0"
rusttype = "0.9"
log = "0.4"

[dependencies.image]
version = "0.25"
features = ["png", "jpeg"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
env_logger = "0.11"
wgpu = { version = "24.0" }
instant = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
wgpu = { version = "24.0", default-features = false, features = [ "webgl", "wgsl"  ]}
# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
