[package]
name = "wgpu_renderer"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/FirePrincess01/wgpu_renderer"
description = "A collection of shaders and utilities "
license-file = "LICENSE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { version = "1" }
winit = { version = "0.30", optional = true }
bytemuck = { version = "1.21", features = ["derive"], optional = true }
cgmath = { version = "0.18", optional = true }
glam = { version = "0.30", optional = true }
colorous = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true }
rusttype = { version = "0.9", optional = true }
log = { version = "0.4", optional = true }

[dependencies.image]
version = "0.25"
features = ["png", "jpeg"]
optional = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
pollster = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
wgpu = { version = "28.0", optional = true }
instant = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
console_log = { version = "1.0.0", optional = true }
instant = { version = "0.1", features = ["wasm-bindgen"], optional = true }
wgpu = { version = "28.0", default-features = false, features = [
    "webgl",
    "wgsl",
], optional = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
], optional = true }


[features]
default = ["render"]
render = [
    "watch",
    "dep:pollster",
    "dep:winit",
    "dep:bytemuck",
    "dep:cgmath",
    "dep:glam",
    "dep:colorous",
    "dep:anyhow",
    "dep:rusttype",
    "dep:log",
    "dep:image",

    "dep:env_logger",
    "dep:wgpu",
    "dep:instant",

    "dep:console_error_panic_hook",
    "dep:console_log",
    "dep:instant",
    "dep:wgpu",
    "dep:web-sys",
]
watch = []
