[package]
name = "wgpu_renderer"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/FirePrincess01/wgpu_renderer"
description = "A collection of shaders and utilities "
license-file = "LICENSE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = "0.30"
bytemuck = { version = "1.24", features = ["derive"] }
cgmath = { version = "0.18" }
glam = { version = "0.30" }
colorous = { version = "1.0" }
anyhow = { version = "1.0" }
rusttype = { version = "0.9" }
log = { version = "0.4" }


[dependencies.image]
version = "0.25"
features = ["png", "jpeg"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
pollster = { version = "0.4" }
env_logger = { version = "0.11" }
wgpu = { version = "28.0" }
instant = { version = "0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.7" }
console_log = { version = "1.0.0" }
instant = { version = "0.1", features = ["wasm-bindgen"] }
wgpu = { version = "28.0", default-features = false, features = [
    "webgl",
    "wgsl",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
